external-crates/move/move-compiler/tests/move_2024/parser/mut_keyword.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/mut_keyword.move:5:20
  │
5 │     public fun foo(mut: &mut u64): &mut u64 {
  │                    ^^^
  │                    │
  │                    Unexpected 'mut'
  │                    Expected an identifier

